[gd_scene load_steps=19 format=3 uid="uid://cw4sj4xjkq8o2"]

[ext_resource type="PackedScene" uid="uid://ca8xi5jgrhfou" path="res://templates/beackroung.tscn" id="1_5v8yi"]
[ext_resource type="Script" uid="uid://bs2w2dtn6hcd" path="res://worlds/pease.gd" id="1_fociy"]
[ext_resource type="Script" uid="uid://ctt4ohvuu1rca" path="res://templates/follow_mouse_camera/follow_mouse_camera.gd" id="2_dkbyk"]
[ext_resource type="PackedScene" uid="uid://dbf0pffx8h485" path="res://templates/button_template.tscn" id="4_upm6v"]
[ext_resource type="Script" uid="uid://brd3dt2uk6u6c" path="res://buttons_scripts/start_tutorial_boss.gd" id="5_4c2l3"]
[ext_resource type="FontFile" uid="uid://dos8l2uo4sdqr" path="res://assets/fonts/Ithaca/Ithaca.ttf" id="6_4c2l3"]
[ext_resource type="Theme" uid="uid://c3jix8nnbwx53" path="res://assets/theme/standart.tres" id="7_eid6d"]
[ext_resource type="PackedScene" uid="uid://bvlw1exf02m2s" path="res://worlds/battel_zone.tscn" id="7_uf2t8"]
[ext_resource type="PackedScene" uid="uid://baet8hpwqljsu" path="res://Gui/main_buttons/bosses.tscn" id="9_jnctx"]
[ext_resource type="PackedScene" uid="uid://kqurvydy150r" path="res://Gui/main_buttons/achievements.tscn" id="11_e37mn"]
[ext_resource type="PackedScene" uid="uid://dr73wiuefcobr" path="res://Gui/main_buttons/weapons.tscn" id="16_cpd08"]

[sub_resource type="Theme" id="Theme_eid6d"]
LineEdit/font_sizes/font_size = 26
LineEdit/fonts/font = ExtResource("6_4c2l3")

[sub_resource type="Animation" id="Animation_fociy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StartTutorialBoss/Polygon2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(58.666676, -11.555556)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StartTutorialBoss/Polygon2D2:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(56.000008, 36.444443)]
}

[sub_resource type="Animation" id="Animation_dkbyk"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StartTutorialBoss/Polygon2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(58.666676, -11.555556), Vector2(58.666676, -3.5555563), Vector2(58.666676, -11.555556)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StartTutorialBoss/Polygon2D2:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(56.000008, 36.444443), Vector2(56.000008, 23.11111), Vector2(56.000008, 36.444443)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5v8yi"]
_data = {
&"RESET": SubResource("Animation_fociy"),
&"idle": SubResource("Animation_dkbyk")
}

[sub_resource type="GDScript" id="GDScript_jnctx"]
script/source = "@tool
extends GameMenuButton


func _toggled(_toggled_on: bool) -> void:
	G.update_and_save()
	var camera = get_tree().get_first_node_in_group(\"Camera\")
	camera.is_locked = true
	var tween = get_tree().create_tween().set_ease(Tween.EASE_IN).set_trans(Tween.TRANS_CUBIC)
	tween.tween_property(camera,\"position\",Vector2(camera.position.x,800000),9)
	var _modulate = Color(0,0,0,0)
	for nodes in camera.get_children():
		_modulate = nodes.modulate
		get_tree().create_tween().tween_property(nodes,\"modulate\",Color(_modulate.r,_modulate.g,_modulate.b,0),2)
	
	await get_tree().create_timer(4).timeout
	get_tree().quit()
	super(_toggled_on)
	
func _process(_delta: float) -> void:
	super(_delta)
"

[sub_resource type="GDScript" id="GDScript_4c2l3"]
script/source = "@tool
extends GameMenuButton

@onready var text_size:Vector2 = $TextEdit.size

func _toggled(_toggled_on: bool) -> void:
	if _toggled_on:
		$TextEdit.visible = true
		get_tree().create_tween().tween_property($TextEdit, \"size\", text_size, 0.5)
		if forus_camera:
				get_tree().create_tween().tween_property(get_tree().get_first_node_in_group(\"World\").get_node(\"Camera2D\"), \"position\", self.position+((self.size*self.scale)*0.5)+forus_camera_offset, 1).set_ease(Tween.EASE_OUT).set_trans(Tween.TRANS_CUBIC)
	else:
		get_tree().create_tween().tween_property($TextEdit, \"size\", Vector2(text_size.x,0), 0.5)
		await get_tree().create_timer(0.5).timeout
		$TextEdit.visible = false
	focus_mode = Control.FOCUS_NONE

func _ready() -> void:
	text_size = $TextEdit.size
	if !Engine.is_editor_hint():
		$TextEdit.size = Vector2(text_size.x,0)
		$TextEdit.visible = false

func _process(_delta: float) -> void:
	focus_mode = Control.FOCUS_NONE
	if is_hovered() and !disabled:
		$Control/SelectionArrow.visible = true
	else:
		$Control/SelectionArrow.visible = false
"

[sub_resource type="GDScript" id="GDScript_upm6v"]
script/source = "@tool
extends GameMenuButton


func _toggled(_toggled_on: bool) -> void:
	super(_toggled_on)
	
func _process(_delta: float) -> void:
	super(_delta)
"

[node name="Pease" type="Node2D" groups=["World"]]
script = ExtResource("1_fociy")

[node name="Beackroung" parent="." instance=ExtResource("1_5v8yi")]

[node name="Camera2D" type="Camera2D" parent="." groups=["Camera"]]
script = ExtResource("2_dkbyk")

[node name="UpArrow" type="Polygon2D" parent="Camera2D"]
position = Vector2(0, -500)
rotation = -3.1415927
scale = Vector2(3, 3)
offset = Vector2(10.666672, 2.666666)
polygon = PackedVector2Array(-10.666676, -2.666666, -2.6666718, -10.666666, -18.666672, -10.666666)

[node name="DownArrow" type="Polygon2D" parent="Camera2D"]
position = Vector2(0, 500)
rotation = -3.1415927
scale = Vector2(3, 3)
color = Color(0.4186, 0.42619, 0.46, 1)
offset = Vector2(10.665016, 13.345919)
polygon = PackedVector2Array(-10.666671, -13.33333, -2.6666718, -5.33333, -18.666672, -5.33333)

[node name="LeftArrow" type="Polygon2D" parent="Camera2D"]
position = Vector2(-900, 0)
rotation = -1.5707964
scale = Vector2(3, 3)
offset = Vector2(10.666672, 2.666666)
polygon = PackedVector2Array(-10.666671, -13.33333, -2.6666718, -5.33333, -18.666672, -5.33333)

[node name="RightArrow" type="Polygon2D" parent="Camera2D"]
position = Vector2(900, 0)
rotation = -1.5707964
scale = Vector2(3, 3)
offset = Vector2(10.666672, 2.666666)
polygon = PackedVector2Array(-10.666672, -5.3333225, -2.6666708, -13.333323, -18.666672, -13.333323)

[node name="Help" type="LineEdit" parent="Camera2D"]
offset_left = -336.0
offset_top = 400.0
offset_right = 360.0
offset_bottom = 432.0
theme = SubResource("Theme_eid6d")
text = "На ведись на край экрана или используй wasd, чтобы перемещаться по меню"
alignment = 1
editable = false
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5v8yi")
}
autoplay = "idle"

[node name="Exit" parent="." instance=ExtResource("4_upm6v")]
offset_left = 184.0
offset_top = -128.0
offset_right = 247.0
offset_bottom = -110.0
focus_mode = 0
text = "Выход"
script = SubResource("GDScript_jnctx")

[node name="Help" parent="." instance=ExtResource("4_upm6v")]
offset_left = -117.0
offset_top = -128.0
offset_right = -47.0
offset_bottom = -110.0
focus_mode = 0
text = "помощь"
script = SubResource("GDScript_4c2l3")
forus_camera = true

[node name="TextEdit" type="TextEdit" parent="Help"]
visible = false
layout_mode = 0
offset_left = 69.33333
offset_right = 352.0
offset_bottom = 288.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("7_eid6d")
text = "Управление:
 наведение - игрок движется к мышке
 Если игрок выйден за аренну он начнёт
 получать урон!
Оружия:
 после победы над боссами открываются
 новые виды оружия. Так например после
 победы над Обучающим Босом ты
 откроешь пули.
Ты можешь нажимать на почти люыбе кнопки, что бы навести камеру на них.

PS: в любой момент ты можешь безопастно выйти из игры shift+beakspace, но это секрет!"
emoji_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
virtual_keyboard_show_on_focus = false
middle_mouse_paste_enabled = false
empty_selection_clipboard_enabled = false
wrap_mode = 1

[node name="MainButtons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="WIP" type="LineEdit" parent="MainButtons"]
layout_mode = 0
offset_left = -240.0
offset_top = -288.0
offset_right = 264.0
offset_bottom = -256.0
theme = SubResource("Theme_eid6d")
text = "игра не доделана, прошу прощения, обновления будут"
alignment = 1
editable = false
flat = true

[node name="Bosses" parent="MainButtons" instance=ExtResource("9_jnctx")]
layout_mode = 0
offset_left = -408.0
offset_top = -128.0
offset_right = -348.0
offset_bottom = -110.0

[node name="Nodes" parent="MainButtons" instance=ExtResource("4_upm6v")]
layout_mode = 0
offset_left = 240.0
offset_top = -232.0
offset_right = 368.0
offset_bottom = -214.0
pivot_offset = Vector2(56.000008, 10.666667)
focus_mode = 0
disabled = true
text = "Ноды"
script = SubResource("GDScript_upm6v")

[node name="Polygon2D" type="Polygon2D" parent="MainButtons/Nodes"]
position = Vector2(31.333345, 9.777774)
rotation = 0.0679344
color = Color(0.43529412, 0.43529412, 0.43529412, 1)
offset = Vector2(-31.333336, -10.666664)
polygon = PackedVector2Array(-2.6666565, 9.777775, -2.6666565, 12.444443, 130.79959, 9.244736, 130.61858, 6.584221)

[node name="Achievements" parent="MainButtons" instance=ExtResource("11_e37mn")]
layout_mode = 0
offset_left = -192.0
offset_top = -256.0
offset_right = -97.0
offset_bottom = -238.0

[node name="Weapons" parent="MainButtons" instance=ExtResource("16_cpd08")]
layout_mode = 0
offset_left = -512.0
offset_top = -256.0
offset_right = -417.0
offset_bottom = -238.0
pivot_offset = Vector2(-0.063097, -0.15272522)

[node name="StartTutorialBoss" parent="." instance=ExtResource("4_upm6v")]
offset_left = -56.0
offset_top = 1240.0
offset_bottom = 1258.0
pivot_offset = Vector2(56.000008, 10.666667)
focus_mode = 0
text = "Обучающий Босс"
script = ExtResource("5_4c2l3")
needs_weapons = true
change_scene = ExtResource("7_uf2t8")

[node name="Polygon2D" type="Polygon2D" parent="StartTutorialBoss"]
position = Vector2(58.666676, -11.555556)
offset = Vector2(8.000004, 2.666666)
polygon = PackedVector2Array(-10.666676, -2.666666, -5.333342, -13.333332, -16.00001, -13.333332)

[node name="Polygon2D2" type="Polygon2D" parent="StartTutorialBoss"]
position = Vector2(56.000008, 36.444443)
rotation = 3.1415925
offset = Vector2(10.666672, 2.666666)
polygon = PackedVector2Array(-10.666676, -2.666666, -5.333342, -13.333332, -16.00001, -13.333332)

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(-8, 9808)
